test/corpus/structs.txt
========================================================================
struct definition
========================================================================

struct Element {
  name: String,
  atomic_number: Scalar,
  density: MassDensity,
}

---

(source_file
  (struct_declaration
    (identifier)
    (struct_field
      (identifier)
      (type_annotation
        (string_type)))
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))))

========================================================================
struct definition with trailing comma
========================================================================

struct Point {
  x: Scalar,
  y: Scalar,
}

---

(source_file
  (struct_declaration
    (identifier)
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))))

========================================================================
generic struct definition
========================================================================

struct Vec2<D: Dim> {
  x: D,
  y: D,
}

---

(source_file
  (struct_declaration
    (identifier)
    (type_parameters
      (type_parameter
        (identifier)
        (identifier)))
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))))

========================================================================
struct instantiation
========================================================================

let hydrogen = Element {
  name: "Hydrogen",
  atomic_number: 1,
  density: 0.08988 g/L,
}

---

(source_file
  (variable_declaration
    (identifier)
    (expression
      (primary
        (struct_instantiation
          (identifier)
          (struct_instantiation_field
            (identifier)
            (expression
              (primary
                (string
                  (fixed_string
                    (string_content))))))
          (struct_instantiation_field
            (identifier)
            (expression
              (primary
                (number
                  (decimal_number)))))
          (struct_instantiation_field
            (identifier)
            (expression
              (multiplicative_expression
                (implicit_multiplication
                  (primary
                    (number
                      (decimal_number)))
                  (primary
                    (identifier)))
                (primary
                  (identifier))))))))))

========================================================================
struct instantiation without trailing comma
========================================================================

Point { x: 1, y: 2 }

---

(source_file
  (expression
    (primary
      (struct_instantiation
        (identifier)
        (struct_instantiation_field
          (identifier)
          (expression
            (primary
              (number
                (decimal_number)))))
        (struct_instantiation_field
          (identifier)
          (expression
            (primary
              (number
                (decimal_number)))))))))

========================================================================
field access
========================================================================

hydrogen.density

---

(source_file
  (expression
    (field_access
      (primary
        (identifier))
      (identifier))))

========================================================================
chained field access
========================================================================

p1.lon + p2.lon

---

(source_file
  (expression
    (additive_expression
      (field_access
        (primary
          (identifier))
        (identifier))
      (field_access
        (primary
          (identifier))
        (identifier)))))

========================================================================
field access in string interpolation
========================================================================

print("Distance {p1.name} - {p2.name}")

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (primary
          (string
            (interpolated_string
              (string_content)
              (interpolation
                (expression
                  (field_access
                    (primary
                      (identifier))
                    (identifier))))
              (string_content)
              (interpolation
                (expression
                  (field_access
                    (primary
                      (identifier))
                    (identifier)))))))))))

========================================================================
struct with all supported field types
========================================================================

struct Everything {
  flag: Bool,
  label: String,
  when: DateTime,
  count: Scalar,
  things: List<Scalar>,
  callback: Fn[(Scalar) -> Scalar],
}

---

(source_file
  (struct_declaration
    (identifier)
    (struct_field
      (identifier)
      (type_annotation
        (boolean_type)))
    (struct_field
      (identifier)
      (type_annotation
        (string_type)))
    (struct_field
      (identifier)
      (type_annotation
        (datetime_type)))
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))
    (struct_field
      (identifier)
      (type_annotation
        (list_type
          (type_annotation
            (dimension_expression
              (dimension_factor
                (dimension_power
                  (dimension_primary
                    (identifier)))))))))
    (struct_field
      (identifier)
      (type_annotation
        (function_type
          (type_annotation
            (dimension_expression
              (dimension_factor
                (dimension_power
                  (dimension_primary
                    (identifier))))))
          (type_annotation
            (dimension_expression
              (dimension_factor
                (dimension_power
                  (dimension_primary
                    (identifier)))))))))))
