test/corpus/unicode.txt
========================================================================
unicode identifiers
========================================================================

MeineSchöneVariable

---

(source_file
  (expression
    (primary
      (identifier))))

========================================================================
greek letter identifiers
========================================================================

λ
φ
σ
ΔL

---

(source_file
  (expression
    (primary
      (identifier)))
  (expression
    (primary
      (identifier)))
  (expression
    (primary
      (identifier)))
  (expression
    (primary
      (identifier))))

========================================================================
subscripted identifier
========================================================================

Mass_H₂O

---

(source_file
  (expression
    (primary
      (identifier))))

========================================================================
degree and prime identifiers
========================================================================

°
′
″

---

(source_file
  (expression
    (primary
      (identifier)))
  (expression
    (primary
      (identifier)))
  (expression
    (primary
      (identifier))))

========================================================================
unicode comparison operators
========================================================================

1 ≤ 2
1 ≥ 2
1 ≠ 2
1 ⩵ 2

---

(source_file
  (expression
    (comparison_expression
      (primary
        (number
          (decimal_number)))
      (primary
        (number
          (decimal_number)))))
  (expression
    (comparison_expression
      (primary
        (number
          (decimal_number)))
      (primary
        (number
          (decimal_number)))))
  (expression
    (comparison_expression
      (primary
        (number
          (decimal_number)))
      (primary
        (number
          (decimal_number)))))
  (expression
    (comparison_expression
      (primary
        (number
          (decimal_number)))
      (primary
        (number
          (decimal_number))))))

========================================================================
unicode minus sign
========================================================================

1 − 2

---

(source_file
  (expression
    (additive_expression
      (primary
        (number
          (decimal_number)))
      (primary
        (number
          (decimal_number))))))

========================================================================
currency and percent identifiers
========================================================================

$
€
%
‰

---

(source_file
  (expression
    (primary
      (identifier)))
  (expression
    (primary
      (identifier)))
  (expression
    (primary
      (identifier)))
  (expression
    (primary
      (identifier))))

========================================================================
unicode arrow conversion
========================================================================

1 in → cm
1 in ➞ cm

---

(source_file
  (expression
    (conversion_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (primary
        (identifier))))
  (expression
    (conversion_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (primary
        (identifier)))))
