test/corpus/units.txt
========================================================================
quantity with unit
========================================================================

2 m

---

(source_file
  (expression
    (implicit_multiplication
      (primary
        (number
          (decimal_number)))
      (primary
        (identifier)))))

========================================================================
compound unit expression
========================================================================

9.81 m/s^2

---

(source_file
  (expression
    (multiplicative_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (power_expression
        (primary
          (identifier))
        (primary
          (number
            (decimal_number)))))))

========================================================================
unit multiplication
========================================================================

5 N * 3 m

---

(source_file
  (expression
    (multiplicative_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier))))))

========================================================================
unit division
========================================================================

30 km/h

---

(source_file
  (expression
    (multiplicative_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (primary
        (identifier)))))

========================================================================
unit per unit
========================================================================

meter per second

---

(source_file
  (expression
    (per_expression
      (primary
        (identifier))
      (primary
        (identifier)))))

========================================================================
kilometers per hour written with per
========================================================================

30 km per hour

---

(source_file
  (expression
    (per_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (primary
        (identifier)))))

========================================================================
metric prefixes
========================================================================

1 km
5 GiB
1 mrad
1 kJ

---

(source_file
  (expression
    (implicit_multiplication
      (primary
        (number
          (decimal_number)))
      (primary
        (identifier))))
  (expression
    (implicit_multiplication
      (primary
        (number
          (decimal_number)))
      (primary
        (identifier))))
  (expression
    (implicit_multiplication
      (primary
        (number
          (decimal_number)))
      (primary
        (identifier))))
  (expression
    (implicit_multiplication
      (primary
        (number
          (decimal_number)))
      (primary
        (identifier)))))

========================================================================
degree and arcminute
========================================================================

48° + 47′

---

(source_file
  (expression
    (additive_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier))))))

========================================================================
arcsecond
========================================================================

22.92″

---

(source_file
  (expression
    (implicit_multiplication
      (primary
        (number
          (decimal_number)))
      (primary
        (identifier)))))

========================================================================
negative degrees
========================================================================

-(33° + 56′)

---

(source_file
  (expression
    (unary_expression
      (primary
        (parenthesized_expression
          (expression
            (additive_expression
              (implicit_multiplication
                (primary
                  (number
                    (decimal_number)))
                (primary
                  (identifier)))
              (implicit_multiplication
                (primary
                  (number
                    (decimal_number)))
                (primary
                  (identifier))))))))))

========================================================================
unit with mass and length
========================================================================

0.08988 g/L

---

(source_file
  (expression
    (multiplicative_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (primary
        (identifier)))))

========================================================================
squared unicode unit
========================================================================

4 meter²

---

(source_file
  (expression
    (implicit_multiplication
      (primary
        (number
          (decimal_number)))
      (unicode_power_expression
        (primary
          (identifier))
        (unicode_exponent)))))

========================================================================
unit conversion
========================================================================

30 km/h -> mph
1 mrad -> degree
5 in + 2 ft -> cm
27 weeks -> days

---

(source_file
  (expression
    (conversion_expression
      (multiplicative_expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))
        (primary
          (identifier)))
      (primary
        (identifier))))
  (expression
    (conversion_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (primary
        (identifier))))
  (expression
    (conversion_expression
      (additive_expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier))))
      (primary
        (identifier))))
  (expression
    (conversion_expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier)))
      (primary
        (identifier)))))

========================================================================
unit in type position
========================================================================

unit BMI: Mass / Length^2 = kg / m^2

---

(source_file
  (unit_declaration
    (identifier)
    (dimension_expression
      (dimension_factor
        (dimension_factor
          (dimension_power
            (dimension_primary
              (identifier))))
        (dimension_power
          (dimension_primary
            (identifier))
          (dimension_exponent
            (number
              (decimal_number))))))
    (expression
      (multiplicative_expression
        (primary
          (identifier))
        (power_expression
          (primary
            (identifier))
          (primary
            (number
              (decimal_number))))))))
